<resources>
    <string name="app_name">drinkProject</string>
    <string name="liquor">양주</string>
    <string name="soju">소주</string>
    <string name="beer">맥주</string>
    <string name="makgeolli">막걸리</string>
    <string name="sort_like">좋아요순</string>
    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>